--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-26  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst/audioscale/gstaudioscale.c: (audioscale_get_type):
+	  It's GstAudioscale, no namespace pollution please
+
 2005-03-26  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* configure.ac:
