--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/typefind/gsttypefindfunctions.c: (aac_type_find):
+	  Obviously, a framelen of 0 is not right.
+
 2005-03-26  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
 	* gst/audioscale/gstaudioscale.c: (audioscale_get_type):
