--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-03-30  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/jpeg/gstjpegdec.c: (gst_jpegdec_my_error_exit),
+	(gst_jpegdec_init), (gst_jpegdec_chain):
+	* ext/jpeg/gstjpegdec.h:
+	  Don't exit on invalid data. Instead, throw an error. Partially
+	  fixes #164028.
+
 2005-03-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* configure.ac:
