--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-04-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_class_init),
+	(gst_play_base_bin_init), (check_queue), (queue_threshold_reached),
+	(queue_out_of_data), (gen_preroll_element):
+	* gst/playback/gstplaybasebin.h:
+	  Ugh, s/treshold/threshold/ typo.
+
 2005-04-01  Wouter Paesen  <wouter@kangaroot.net>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
