--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream),
+	(gst_matroska_demux_video_caps), (gst_matroska_demux_audio_caps):
+	  Yet again more tags.
+
+2005-04-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* gst-libs/gst/riff/riff-media.c:
 	(gst_riff_create_video_caps_with_data),
 	(gst_riff_create_audio_caps_with_data):
