Forgot to specify the Bug# the patch fixes in the ChangeLog in the last commit
Original commit message from CVS:
Forgot to specify the Bug# the patch fixes in the ChangeLog in the last commit

--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,7 @@
 	(gst_udpsrc_init_receive):
 	* gst/udp/gstudpsrc.h:
 	  Fixed and added some comments.
+	Fixes bug#169391
 
 2005-04-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
