--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2005-04-02  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* configure.ac:
+	* ext/Makefile.am:
+	* ext/wavpack/Makefile.am:
+	* ext/wavpack/bits.c:
+	* ext/wavpack/extra1.c:
+	* ext/wavpack/extra2.c:
+	* ext/wavpack/float.c: 
+	* ext/wavpack/gstwavpackdec.c:
+	* ext/wavpack/gstwavpackreader.c:
+	* ext/wavpack/gstwavpackreader.h:
+	* ext/wavpack/metadata.c: 
+	* ext/wavpack/pack.c:
+	* ext/wavpack/unpack.c:
+	* ext/wavpack/wavpack.h:
+	* ext/wavpack/words.c: 
+	* ext/wavpack/wputils.c:
+	  New plugin: wavpackdec, a wavpack decoder (#171371)
+
+	* gst/typefind/gsttypefindfunctions.c:
+	  Add typefinding for wavpack.
+
 2005-04-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream),
