Don't advertise query types that are not supported (GST_QUERY_START and GST_QUERY_SEGMENT_END)
Original commit message from CVS:
Don't advertise query types that are not supported (GST_QUERY_START and GST_QUERY_SEGMENT_END)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-02  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* ext/cdaudio/gstcdaudio.c: (gst_cdaudio_get_query_types):
+	  Don't advertise query types that are not supported
+	  (GST_QUERY_START and GST_QUERY_SEGMENT_END)
+
+2005-04-02  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* configure.ac:
 	* ext/Makefile.am:
 	* ext/wavpack/Makefile.am:
